force-app/main/default/objects/Examen__c/Examen__c.object-meta.xml
<CustomObject>
    <label>Examen</label>
    <nameField>
        <displayFormat>EX-{00000}</displayFormat>
        <label>Nom de Examen</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Examens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>