force-app/main/default/objects/Examen__c/fields/Adresse__c.field-meta.xml
<CustomField>
    <fullName>Adresse__c</fullName>
    <description>Adresse du lieu d&#39;examen</description>
    <label>Adresse</label>
    <length>152</length>
    <type>Text</type>
</CustomField>