force-app/main/default/objects/Examen__c/fields/AdresseLieuExamen__c.field-meta.xml
<CustomField>
    <fullName>AdresseLieuExamen__c</fullName>
    <label>Adresse du lieu d&#39;examen</label>
    <length>152</length>
    <type>Text</type>
</CustomField>