force-app/main/default/objects/Examen__c/fields/CategorieMateriel__c.field-meta.xml
<CustomField>
    <fullName>CategorieMateriel__c</fullName>
    <description>[CATMAT]</description>
    <label>Catégorie de matériel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MA</fullName>
                <label>MA – Matériel Agricole</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>PL – Poids Lourd</label>
            </value>
            <value>
                <fullName>2R</fullName>
                <label>2R – 2 Roues</label>
            </value>
            <value>
                <fullName>RC</fullName>
                <label>RC – RCP / PJ / ATR</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <label>MT – Maritime</label>
            </value>
            <value>
                <fullName>VL</fullName>
                <label>VL – Véhicule Léger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>