force-app/main/default/objects/Examen__c/fields/CodeBCALieuExamen__c.field-meta.xml
<CustomField>
    <fullName>CodeBCALieuExamen__c</fullName>
    <label>Code BCA du lieu d’examen</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>