force-app/main/default/objects/Examen__c/fields/CodePostal__c.field-meta.xml
<CustomField>
    <fullName>CodePostal__c</fullName>
    <label>Code postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>