force-app/main/default/objects/Examen__c/fields/CodePostalLieuRDV__c.field-meta.xml
<CustomField>
    <fullName>CodePostalLieuRDV__c</fullName>
    <label>Code postal du lieu du RDV</label>
    <length>5</length>
    <type>Text</type>
</CustomField>