force-app/main/default/objects/Examen__c/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <label>Commentaires</label>
    <type>TextArea</type>
</CustomField>