force-app/main/default/objects/Examen__c/fields/ContreExpertise__c.field-meta.xml
<CustomField>
    <fullName>ContreExpertise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contre expertise</label>
    <type>Checkbox</type>
</CustomField>