force-app/main/default/objects/Examen__c/fields/DateExamen__c.field-meta.xml
<CustomField>
    <fullName>DateExamen__c</fullName>
    <label>Date de l&#39;examen</label>
    <type>Date</type>
</CustomField>