force-app/main/default/objects/Examen__c/fields/DateHonoree__c.field-meta.xml
<CustomField>
    <fullName>DateHonoree__c</fullName>
    <description>Date à laquelle la mission a été honorée.</description>
    <label>Date honorée</label>
    <type>Date</type>
</CustomField>