force-app/main/default/objects/Examen__c/fields/DateRDV__c.field-meta.xml
<CustomField>
    <fullName>DateRDV__c</fullName>
    <label>Date de RDV</label>
    <type>Date</type>
</CustomField>