force-app/main/default/objects/Examen__c/fields/DirectivesParticulieres__c.field-meta.xml
<CustomField>
    <fullName>DirectivesParticulieres__c</fullName>
    <description>[LDIPA]</description>
    <label>Directives particulières</label>
    <length>80</length>
    <type>Text</type>
</CustomField>