force-app/main/default/objects/Examen__c/fields/Dossier__c.field-meta.xml
<CustomField>
    <fullName>Dossier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Examens du dossier</relationshipLabel>
    <relationshipName>Examens</relationshipName>
    <type>Lookup</type>
</CustomField>