force-app/main/default/objects/Examen__c/fields/EmailReparateur__c.field-meta.xml
<CustomField>
    <fullName>EmailReparateur__c</fullName>
    <description>Adresse e-mail du réparateur. La valeur de l&#39;e-mail du compte est copiée via un workflow. Ce champ est utilisée dans le workflow &#39;EnvoiMailAuReparateur&#39;.NE PAS SUPPRIMER.</description>
    <label>Email Reparateur</label>
    <type>Email</type>
</CustomField>