force-app/main/default/objects/Examen__c/fields/Epaviste__c.field-meta.xml
<CustomField>
    <fullName>Epaviste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Épaviste</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ProfessionnelsAutomobile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Examens de l&#39;épaviste</relationshipLabel>
    <relationshipName>Examens1</relationshipName>
    <type>Lookup</type>
</CustomField>