force-app/main/default/objects/Examen__c/fields/EtatRDV__c.field-meta.xml
<CustomField>
    <fullName>EtatRDV__c</fullName>
    <label>État du RDV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>Confirmé</fullName>
            </value>
            <value>
                <fullName>Honoré</fullName>
            </value>
            <value>
                <fullName>Non Honoré</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>