force-app/main/default/objects/Examen__c/fields/ExamenHonore__c.field-meta.xml
<CustomField>
    <fullName>ExamenHonore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Examen honoré</label>
    <type>Checkbox</type>
</CustomField>