force-app/main/default/objects/Examen__c/fields/FlagDemandeMAJ__c.field-meta.xml
<CustomField>
    <fullName>FlagDemandeMAJ__c</fullName>
    <description>[FMAJREP]</description>
    <label>Flag de demande de mise à jour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 pas de demande</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 Jours de passage</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 Eléments généraux</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 Ensemble des informations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>