force-app/main/default/objects/Examen__c/fields/GarantieMiseEnJeu__c.field-meta.xml
<CustomField>
    <fullName>GarantieMiseEnJeu__c</fullName>
    <label>Garantie mise en jeu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Garantie_mise_en_jeu</valueSetName>
    </valueSet>
</CustomField>