force-app/main/default/objects/Examen__c/fields/GarantieMiseEnJeuDeux__c.field-meta.xml
<CustomField>
    <fullName>GarantieMiseEnJeuDeux__c</fullName>
    <label>2e Garantie mise en jeu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Garantie_mise_en_jeu</valueSetName>
    </valueSet>
</CustomField>