force-app/main/default/objects/Examen__c/fields/HeureRDV__c.field-meta.xml
<CustomField>
    <fullName>HeureRDV__c</fullName>
    <label>Heure du RDV</label>
    <type>Time</type>
</CustomField>