force-app/main/default/objects/Examen__c/fields/IssuePresumee__c.field-meta.xml
<CustomField>
    <fullName>IssuePresumee__c</fullName>
    <description>code de l&#39;issue retenue par l&#39;expert [EXPERTISE.COD_ISSUE_PRESUM]</description>
    <label>Issue présumée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Autre</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Indéterminé</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Note particulière</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Perte totale</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Réparation</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Vol non retrouvé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>