force-app/main/default/objects/Examen__c/fields/Localite__c.field-meta.xml
<CustomField>
    <fullName>Localite__c</fullName>
    <label>Localité</label>
    <length>27</length>
    <type>Text</type>
</CustomField>