force-app/main/default/objects/Examen__c/fields/MaitreStage__c.field-meta.xml
<CustomField>
    <fullName>MaitreStage__c</fullName>
    <formula>IF($User.Stagiaire__c = true , HYPERLINK(&#39;/&#39;+ Owner:User.MaitreStage__c ,Owner:User.MaitreStage__r.LastName+ &#39; &#39; +Owner:User.MaitreStage__r.FirstName , &quot;_blank&quot;), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maître de stage</label>
    <type>Text</type>
</CustomField>