force-app/main/default/objects/Examen__c/fields/MontantApproximatifReparation__c.field-meta.xml
<CustomField>
    <fullName>MontantApproximatifReparation__c</fullName>
    <description>Montant approximatif des réparations retenu par l&#39;expert [EXPERTISE.MONT_APPRO_SD]</description>
    <label>Montant approximatif de la réparation</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>