force-app/main/default/objects/Examen__c/fields/MotifAbsence__c.field-meta.xml
<CustomField>
    <fullName>MotifAbsence__c</fullName>
    <description>Code du motif de rendez-vous manqué [EXAMEN.COD_MOTIF_RDV_MANQUE]</description>
    <label>Motif d&#39;absence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Véhicule absent</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Garage fermé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>