force-app/main/default/objects/Examen__c/fields/NatureExamen__c.field-meta.xml
<CustomField>
    <fullName>NatureExamen__c</fullName>
    <description>Code donnant la nature de l&#39;intervention saisie lors de l&#39;examen [EXAMEN.COD_NAT_INTERVENT]</description>
    <label>Nature de l&#39;examen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>BJJ</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Vu, avant travaux</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Vu, pendant travaux</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Sur marbre</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Vu, après travaux</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Absent au rendez-vous</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Non Vu, Dossier examiné</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Non Vu, Vu pièces remplacées</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Non Vu, Avis sur pièces</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Non Vu, Traité à distance (EAD)</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Non Vu, Volé Non Retrouvé (VNR)</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Non Vu, Préparation préalable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>