force-app/main/default/objects/Examen__c/fields/NomLieuExamen__c.field-meta.xml
<CustomField>
    <fullName>NomLieuExamen__c</fullName>
    <label>Nom du lieu d&#39;examen</label>
    <length>56</length>
    <type>Text</type>
</CustomField>