force-app/main/default/objects/Examen__c/fields/NomLieuRDV__c.field-meta.xml
<CustomField>
    <fullName>NomLieuRDV__c</fullName>
    <label>Nom du lieu de RDV</label>
    <length>56</length>
    <type>Text</type>
</CustomField>