force-app/main/default/objects/Examen__c/fields/OrigineRDV__c.field-meta.xml
<CustomField>
    <fullName>OrigineRDV__c</fullName>
    <label>Origine du RDV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Guichet Assuré</fullName>
            </value>
            <value>
                <fullName>Guichet Assureur</fullName>
            </value>
            <value>
                <fullName>Guichet réparateur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>