force-app/main/default/objects/Examen__c/fields/PaysLieuExamen__c.field-meta.xml
<CustomField>
    <fullName>PaysLieuExamen__c</fullName>
    <label>Pays du lieu d&#39;examen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pays</valueSetName>
    </valueSet>
</CustomField>