force-app/main/default/objects/Examen__c/fields/Reparateur__c.field-meta.xml
<CustomField>
    <fullName>Reparateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Réparateur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Examens du réparateur</relationshipLabel>
    <relationshipName>Examens</relationshipName>
    <type>Lookup</type>
</CustomField>