force-app/main/default/objects/Examen__c/fields/Stagiaire__c.field-meta.xml
<CustomField>
    <fullName>Stagiaire__c</fullName>
    <formula>IF( Owner:User.Stagiaire__c  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stagiaire</label>
    <type>Checkbox</type>
</CustomField>