force-app/main/default/objects/Examen__c/fields/TelephoneLieuExamen__c.field-meta.xml
<CustomField>
    <fullName>TelephoneLieuExamen__c</fullName>
    <label>Téléphone du lieu d&#39;examen</label>
    <type>Phone</type>
</CustomField>