force-app/main/default/objects/Examen__c/fields/TitreExamen__c.field-meta.xml
<CustomField>
    <fullName>TitreExamen__c</fullName>
    <label>Titre examen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LibelleTitre</valueSetName>
    </valueSet>
</CustomField>