force-app/main/default/objects/Examen__c/fields/TypeLieuExamen__c.field-meta.xml
<CustomField>
    <fullName>TypeLieuExamen__c</fullName>
    <label>Type du Lieu d&#39;Examen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <label>D : domicile assuré</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>R : réparateur</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B : au bureau de l&#39;expert</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C : centre d&#39;expertise</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>A : autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>