force-app/main/default/objects/Examen__c/fields/Unite__c.field-meta.xml
<CustomField>
    <fullName>Unite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Code du site de l&#39;expert(Unité rattachée à l&#39;examen qui a été réalisée [BUREAU.COD_BUR]</description>
    <label>Unité</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Examens (Unité)</relationshipLabel>
    <relationshipName>Examens2</relationshipName>
    <type>Lookup</type>
</CustomField>