force-app/main/default/objects/Examen__c/fields/Vehicule__c.field-meta.xml
<CustomField>
    <fullName>Vehicule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Véhicule</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Examens</relationshipLabel>
    <relationshipName>Examens</relationshipName>
    <type>Lookup</type>
</CustomField>