force-app/main/default/objects/Examen__c/fields/VehiculeTechniquementReparable__c.field-meta.xml
<CustomField>
    <fullName>VehiculeTechniquementReparable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique si le véhicule est techniquement réparable ou non [EXPERTISE.IND_VEH_TECH_REPAR]</description>
    <label>Véhicule techniquement réparable</label>
    <type>Checkbox</type>
</CustomField>