force-app/main/default/objects/Examen__c/fields/X2GarantieMiseEnJeu__c.field-meta.xml
<CustomField>
    <fullName>X2GarantieMiseEnJeu__c</fullName>
    <description>[GARMJ2]</description>
    <label>2ème Garantie mise en jeu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>‘A’ Avance recours</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>&#39;R&#39; Responsabilité civile</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>&#39;D&#39; Défense – recours</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>&#39;T&#39; Tierce</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>&#39;C&#39; Tierce collision</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>&#39;V&#39; Vol</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>&#39;I&#39; Incendie</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>&#39;B&#39; Bris de glace</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>&#39;Z&#39; Autre</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>&#39;P&#39; Protection juridique</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>‘E’ Absorption de corps étranger</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>‘F’ dommage électrique</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>‘H’ marchandise transportée</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>‘L’ Vandalisme/attentat</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>‘M’ bris de machine</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>‘N’ catastrophe naturelle</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>‘U’ dommages aux pneus</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>‘O’ immobilisation</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>‘G’ Passage sur dénivellation</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>‘J’ Bris de moteur</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>‘Q’ Dommage électronique</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>‘K’ Attelage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>